ul drop down spacing corrected.#3607

--- a/openscholar/themes/hwpi_college/css/hwpi_college.css
+++ b/openscholar/themes/hwpi_college/css/hwpi_college.css
@@ -95,10 +95,6 @@ blockquote {
     margin-right: 0;
 }
 
-ul.nice-menu ul {
-    top: 3.9em !important;
-}
-
 #menu-bar ul.nice-menu a {
     color: #FFFFFF;
     font-family: arial,sans-serif;
